Bug 503787 - Cannot use Save All to save multiple page scans in image formats like PNG or JPEG
Summary: Cannot use Save All to save multiple page scans in image formats like PNG or ...
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-05-05 09:40 UTC by Sergio
Modified: 2025-05-20 18:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio 2025-05-05 09:40:21 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY

It used to be possible to skan multiple pages and then "save all" of them in png format. In that case, skanpage used to produce multiple files adding a number suffix to each file name, since png files cannot contain multiple pages.

Now, that does not work anymore and the action simply fails with an error.

I don't know if that is intentional. If so, the error message should be improved and should clarify that multiple pages cannot be "saved all" using a file format that is not multipage.

Otherwise, the production of multiple files, with the customizable suffix should be restored. Ideally the suffix should be made more flexible, letting one specify a start value, an increment, and a pattern (e.g. "000") to have only 3 digits.

STEPS TO REPRODUCE
1.  Scan some pages
2.  Save all
3. Select PNG as the format

OBSERVED RESULT

An error banner

EXPECTED RESULT

Multiple files are created

SOFTWARE/OS VERSIONS

Operating System: Manjaro Linux 
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Kernel Version: 6.14.4-1-MANJARO (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Sergio 2025-05-07 08:29:57 UTC
Save all not working in tiff either. The latter supports multiple pages, though.
Comment 2 Marc Joliet 2025-05-08 12:06:27 UTC
I see this issue, too, using skanpage 25.04.0 on OpenSuse TW.  The workaround I use is to export to PDF and then export the pages to individual TIFFs (using pdfimages) for post-processing with ScanTailor, but it's too bad I can't just directly save the series of scans as single images anymore.

Operating System: openSUSE Tumbleweed 20250505
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Kernel Version: 6.14.4-1-default (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-4690K CPU @ 3.50GHz
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 580 Series
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: Z97P-D3
Comment 3 John Kizer 2025-05-13 18:18:09 UTC
I can reproduce this on Skanpage 25.04.0 on Fedora KDE 42. Thanks!
Comment 4 Alexander Stippich 2025-05-20 18:41:45 UTC
Git commit 13bb18f7d00de823e4af9b7a1f92372dfa52c628 by Alexander Stippich.
Committed on 20/05/2025 at 18:18.
Pushed by astippich into branch 'master'.

ensure correct url decoding when saving multiple images

M  +1    -1    src/DocumentSaver.cpp

https://invent.kde.org/utilities/skanpage/-/commit/13bb18f7d00de823e4af9b7a1f92372dfa52c628
Comment 5 Alexander Stippich 2025-05-20 18:42:27 UTC
Git commit 00267af1a063e20fbb98ef1c36b5a31c948b6a72 by Alexander Stippich.
Committed on 20/05/2025 at 18:42.
Pushed by astippich into branch 'release/25.04'.

ensure correct url decoding when saving multiple images


(cherry picked from commit 13bb18f7d00de823e4af9b7a1f92372dfa52c628)

Co-authored-by: Alexander Stippich <a.stippich@gmx.net>

M  +1    -1    src/DocumentSaver.cpp

https://invent.kde.org/utilities/skanpage/-/commit/00267af1a063e20fbb98ef1c36b5a31c948b6a72