ensure correct url decoding when saving multiple images

BUG: 503787


(cherry picked from commit 13bb18f7d00de823e4af9b7a1f92372dfa52c628)

Co-authored-by: Alexander Stippich <a.stippich@gmx.net>